fix: Safkeyring truststore bug fix in certificate-analyzer (#4595)
Signed-off-by: hrishikesh-nalawade <hrishikesh.nalawade.17@gmail.com>
Co-authored-by: Pablo Carle <pablocarle@users.noreply.github.com>
Co-authored-by: Jakub Balhar <jakub@balhar.net>
Co-authored-by: Jakub Balhar <jakub.balhar@broadcom.com>